--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,18 @@ h2 {
 /* Title Page */
 
 #title {
-    width: 100%;
+    /* width: 100%;
     padding: 0;
-    margin: 0;
+    margin: 0; */
+    background: linear-gradient(
+                    rgba(0,0,0,0.5),
+                    rgba(0,0,0,0.5)
+    ),
+    url("/images/Alumni\ Heading.jpg");
+    background-size: cover;
+    height: 50rem;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 .intro-image {
     width: 100%;
