--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ h2 {
     font-weight: 600;
     font-size: 1.5rem;
     color: #fff;
+    padding-left: 3%;
 }
 
 .nav-item {
@@ -45,13 +46,9 @@ h2 {
     background-size: cover;
     height: 50rem;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center top;
 }
-.intro-image {
-    width: 100%;
-    filter: grayscale(70%);
-    position: relative;
-}
+
 .title-page {
     padding-top: 7%;
     padding-bottom: 3%;
@@ -65,6 +62,7 @@ h2 {
     z-index: 1;
     font-size: 5rem;
     color: #fff;
+    padding-top: 30%;
 }
 
 .intro-text {
