--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Montserrat';
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
 }
 
 h2 {
@@ -108,6 +108,10 @@ nav {
 }
 
 /* Projects */
+
+#projects {
+    background-color: #93B7BE;
+}
 
 .colored-section h2 {
     color: #fff;
