Add headshot class

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,13 @@ nav {
 
 }
 
+.headshot {
+    height: auto;
+    width: 100%;
+    border-radius: 50%;
+    border: 10px solid #fff;
+}
+
 /* Skills */
 
 #skills h2 {
