Change link to background image

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ nav {
                     rgba(0,0,0,0.5),
                     rgba(0,0,0,0.5)
     ),
-    url("images/Alumni\ Heading.jpg");
+    url(https://github.com/joeauyeung/Personal-Site/blob/main/images/Alumni%20Heading.jpg);
     background-size: cover;
     height: 50rem;
     background-repeat: no-repeat;
