--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ nav {
                     rgba(0,0,0,0.5),
                     rgba(0,0,0,0.5)
     ),
-    url("../images/Alumni Heading.jpg");
+    url("../images/Alumni_Heading.jpg");
     background-size: cover;
     height: 50rem;
     background-repeat: no-repeat;
@@ -93,8 +93,8 @@ nav {
 .headshot {
     height: auto;
     width: 100%;
-    border-radius: 50%;
-    border: 10px solid #fff;
+    border-radius: 100%;
+    border: 5px solid #fff;
 }
 
 /* Skills */
