--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ nav {
                     rgba(0,0,0,0.5),
                     rgba(0,0,0,0.5)
     ),
-    url("../images/Alumni_Heading.jpg");
+    url("images/Alumni_Heading.jpg");
     background-size: cover;
     height: 50rem;
     background-repeat: no-repeat;
