--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,18 @@ nav {
 
 }
 
+#bio-row {
+    align-items: center;
+}
+
+@media screen and (max-width: 991.98px) {
+    #headshot-container {
+        max-width: 300px;
+        margin-bottom: 20px;
+    }
+}
+
+
 .headshot {
     height: auto;
     width: 100%;
