--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
     font-family: 'Montserrat';
-    /* margin: 0;
-    padding: 0; */
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
 }
 
 h2 {
@@ -144,7 +145,7 @@ section {
     ),
     url("images/contact-background.jpg");
     background-size: cover;
-    height: 50rem;
+    height: 10%;
     background-repeat: no-repeat;
 }
 
@@ -175,7 +176,19 @@ section {
 
 @media screen and (max-width: 575.98px) {
     .navbar {
-        width: 100vw;
+        width: 99.9vw;
+    }
+
+    .navbar-brand {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        font-size: 1rem;
+    }
+
+    .nav-link {
+        font-size: 1rem;
     }
 
     .intro {
@@ -186,4 +199,10 @@ section {
         max-width: 150px;
         margin-bottom: 20px;
     }
+
+    .contact-icon {
+        color: #fff;
+        font-size: inherit;
+    }
 }
+
