--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 h2 {
-    font-size: 3vw;
+    font-size: 2.5vw;
     text-align: center;
     padding-bottom: 3%;
 }
@@ -83,7 +83,8 @@ section {
 #bio p {
     color: #fff;
     padding-left: 5%;
-
+    font-size: 1.2vw;
+    text-align: left;
 }
 
 #bio-row {
