--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ section {
 
 .navbar-brand {
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     color: #fff;
     padding-left: 3%;
 }
@@ -33,7 +33,7 @@ section {
 
 .nav-link {
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     color: #fff;
 }
 
